--- a/MainProject/MVPv5/MVPv5.Client/wwwroot/index.html
+++ b/MainProject/MVPv5/MVPv5.Client/wwwroot/index.html
@@ -31,6 +31,9 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="js/editor.js"></script>
+    <script src="js/getContent.js"></script>
+
 </body>
 
 </html>
