--- a/MainProject/MVPv5/MVPv5.Client/wwwroot/index.html
+++ b/MainProject/MVPv5/MVPv5.Client/wwwroot/index.html
@@ -34,6 +34,28 @@
     <script src="js/editor.js"></script>
     <script src="js/getContent.js"></script>
 
+
+
+    <script>
+    window.downloadFromByteArray = ({ byteBase64, fileName, mimeType }) => {
+        const byteCharacters = atob(byteBase64);
+        const byteNumbers = new Array(byteCharacters.length);
+        for (let i = 0; i < byteCharacters.length; i++) {
+            byteNumbers[i] = byteCharacters.charCodeAt(i);
+        }
+        const byteArray = new Uint8Array(byteNumbers);
+        const blob = new Blob([byteArray], { type: mimeType });
+
+        const link = document.createElement('a');
+        link.href = URL.createObjectURL(blob);
+        link.download = fileName;
+        link.click();
+        URL.revokeObjectURL(link.href);
+    };
+    </script>
+
+
+
 </body>
 
 </html>
