--- a/MainProject/MVPv5/MVPv5.Client/wwwroot/index.html
+++ b/MainProject/MVPv5/MVPv5.Client/wwwroot/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,7 +13,6 @@
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
 </head>
-
 <body>
     <div id="app">
         <svg class="loading-progress">
@@ -30,32 +28,9 @@
         <span class="dismiss">🗙</span>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script>navigator.serviceWorker.register('service-worker.js');</script>
-    <script src="js/editor.js"></script>
-    <script src="js/getContent.js"></script>
-
-
-
-    <script>
-    window.downloadFromByteArray = ({ byteBase64, fileName, mimeType }) => {
-        const byteCharacters = atob(byteBase64);
-        const byteNumbers = new Array(byteCharacters.length);
-        for (let i = 0; i < byteCharacters.length; i++) {
-            byteNumbers[i] = byteCharacters.charCodeAt(i);
-        }
-        const byteArray = new Uint8Array(byteNumbers);
-        const blob = new Blob([byteArray], { type: mimeType });
-
-        const link = document.createElement('a');
-        link.href = URL.createObjectURL(blob);
-        link.download = fileName;
-        link.click();
-        URL.revokeObjectURL(link.href);
-    };
-    </script>
-
-
-
+    <script src="js/downloadFile.js"></script>
+    <!--<script>navigator.serviceWorker.register('service-worker.js');</script>-->
+    <!--<script src="js/editor.js"></script>-->
+    <!--<script src="js/getContent.js"></script>-->
 </body>
-
 </html>
